Uses trie for autocomplete than string in, reduced fetch_tags to only once per startup, moved pieces of codes around into their respective places

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,3 @@
 [MAIN]
-TOKEN: MTIxMzgyOTI4MDgyNDU1NzU2OA.G2nPrL.12Y2xU71Xkkh8jHMgCuu4c_tN1DbT5YQRww-kE
+TOKEN: MTE4NTYyNDg0ODAwMTY2NzA3Mg.Gyu65H.CjZLZhjg5WBL6mt3rAXIAYW1PUGpR8m7BWuWJs
+GUILD_SYNC_ID: 1185618619544109076
