--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 [MAIN]
-TOKEN: MTE4NTYyNDg0ODAwMTY2NzA3Mg.Gyu65H.CjZLZhjg5WBL6mt3rAXIAYW1PUGpR8m7BWuWJs
-GUILD_SYNC_ID: 1185618619544109076
+TOKEN: yourBotTokenHere
+GUILD_SYNC_ID: yourServerID
